add DEST location for codebase

--- a/local.conf
+++ b/local.conf
@@ -1,7 +1,9 @@
 [local|localrc]]
 # Refresh sources
 RECLONE=no
- 
+
+DEST=/home/root1/codebase 
+
 # Keep a log of everything
 LOGFILE=$DEST/logs/stack.sh.log
  
