--- a/local.conf
+++ b/local.conf
@@ -2,6 +2,7 @@
 # Refresh sources
 RECLONE=no
 
+# code base location
 DEST=/home/root1/codebase 
 
 # Keep a log of everything
@@ -24,7 +25,7 @@ enable_service q-svc,q-agt,q-dhcp,q-l3,q-meta,q-lbaas,neutron
  
 # Neutron Network
 # Used for real l3 networking
-# HOST_IP=192.168.121.180
+HOST_IP=10.132.3.48
 # FLOATING_RANGE=10.20.0.0/24
 # PUBLIC_NETWORK_GATEWAY=10.20.0.1
 # Q_FLOATING_ALLOCATION_POOL=start=10.20.0.100,end=10.20.0.150
@@ -37,7 +38,7 @@ enable_service q-svc,q-agt,q-dhcp,q-l3,q-meta,q-lbaas,neutron
 # OVS_BRIDGE_MAPPINGS=public:br-ex
  
 # Heat
-enable_service heat,h-api,h-api-cfn,h-api-cw,h-eng
+# enable_service heat,h-api,h-api-cfn,h-api-cw,h-eng
  
 # Ceilometer
 enable_service ceilometer-acentral,ceilometer-collector,ceilometer-api,ceilometer-acompute,
