screen_logdir is added

--- a/local.conf
+++ b/local.conf
@@ -3,11 +3,14 @@
 RECLONE=no
 
 # code base location
-DEST=/home/root1/codebase 
+DEST=/opt/stack/ 
 
 # Keep a log of everything
 LOGFILE=$DEST/logs/stack.sh.log
- 
+VERBOSE=True
+LOG_COLOR=True
+SCREEN_LOGDIR=/opt/stack/logs 
+
 # Passwords
 RABBIT_PASSWORD=password
 DATABASE_PASSWORD=password
