use symbolic names

--- a/local.conf
+++ b/local.conf
@@ -3,13 +3,13 @@
 RECLONE=no
 
 # code base location
-DEST=/opt/stack/ 
+DEST=/opt/stack
 
 # Keep a log of everything
 LOGFILE=$DEST/logs/stack.sh.log
 VERBOSE=True
 LOG_COLOR=True
-SCREEN_LOGDIR=/opt/stack/logs 
+SCREEN_LOGDIR=$DEST/logs 
 
 # Passwords
 RABBIT_PASSWORD=password
