--- a/local.conf
+++ b/local.conf
@@ -3,12 +3,12 @@
 RECLONE=no
 
 # code base location
-DEST=/opt/stack
+#DEST=/opt/stack
 
 # Keep a log of everything
 LOGFILE=$DEST/logs/stack.sh.log
 VERBOSE=True
-LOG_COLOR=True
+LOG_COLOR=False
 SCREEN_LOGDIR=$DEST/logs 
 
 # Passwords
@@ -29,6 +29,7 @@ enable_service q-svc,q-agt,q-dhcp,q-l3,q-meta,q-lbaas,neutron
 # Neutron Network
 # Used for real l3 networking
 HOST_IP=10.132.3.48
+HOST_IPV6=fe80::250:56ff:febb:4c1e/64
 # FLOATING_RANGE=10.20.0.0/24
 # PUBLIC_NETWORK_GATEWAY=10.20.0.1
 # Q_FLOATING_ALLOCATION_POOL=start=10.20.0.100,end=10.20.0.150
