branch name flags are updated

--- a/local.conf
+++ b/local.conf
@@ -17,7 +17,20 @@ DATABASE_PASSWORD=password
 ADMIN_PASSWORD=password
 SERVICE_PASSWORD=password
 SERVICE_TOKEN=password
- 
+
+# Using stable/kilo branches
+# -----------------------------
+
+CINDER_BRANCH=stable/kilo
+GLANCE_BRANCH=stable/kilo
+HORIZON_BRANCH=stable/kilo
+KEYSTONE_BRANCH=stable/kilo
+KEYSTONECLIENT_BRANCH=stable/kilo
+NOVA_BRANCH=stable/kilo
+NOVACLIENT_BRANCH=stable/kilo
+NEUTRON_BRANCH=stable/kilo
+SWIFT_BRANCH=stable/kilo
+
 # Cinder
 VOLUME_BACKING_FILE_SIZE=102500M
 CINDER_SECURE_DELETE=False
