ceilometer branch  updated

--- a/local.conf
+++ b/local.conf
@@ -30,6 +30,7 @@ NOVA_BRANCH=stable/kilo
 NOVACLIENT_BRANCH=stable/kilo
 NEUTRON_BRANCH=stable/kilo
 SWIFT_BRANCH=stable/kilo
+CEILOMETER_BRANCH=stable/kilo
 
 # Cinder
 VOLUME_BACKING_FILE_SIZE=102500M
