--- a/local.conf
+++ b/local.conf
@@ -1,6 +1,6 @@
 [[local|localrc]]
 # Refresh sources
-RECLONE=no
+RECLONE=yes
 
 # code base location
 #DEST=/opt/stack
@@ -9,7 +9,8 @@ RECLONE=no
 LOGFILE=$DEST/logs/stack.sh.log
 VERBOSE=True
 LOG_COLOR=False
-SCREEN_LOGDIR=$DEST/logs 
+SCREEN_LOGDIR=$DEST/logs
+LOGDAYS=2
 
 # Passwords
 RABBIT_PASSWORD=password
