use swift-repo path

--- a/swift-local.conf
+++ b/swift-local.conf
@@ -12,10 +12,14 @@ LOG_COLOR=False
 SCREEN_LOGDIR=$DEST/logs
 LOGDAYS=2
 
+
 ADMIN_PASSWORD=password
 SWIFT_HASH=66a3d6b56c1f479c8b4e70ab5c2000f5
 SWIFT_REPLICAS=1
 SWIFT_DATA_DIR=$DEST/data
+
+SWIFT_REPO=$GIT_BASE/openstack/nova.git
+SWIFT_BRANCH=master
 
 HOST_IP=localhost
 
