--- a/swift-local.conf
+++ b/swift-local.conf
@@ -24,4 +24,4 @@ SWIFT_BRANCH=master
 HOST_IP=localhost
 
 disable_all_services
-enable_service s-proxy s-object s-container s-account
+enable_service key mysql s-proxy s-object s-container s-account
